SERVER-90423 Server Initialization Enhancement: trigger signal handler thread pre fast clock source setup (#22120)

GitOrigin-RevId: 9b29f6b0c82c302282bb0f288382da986f4f34ee