src/mongo/db/mongod_main.cpp
@@ -492,8 +492,6 @@ ExitCode _initAndListen(ServiceContext* serviceContext, int listenPort) {
         cc().setSystemOperationUnkillableByStepdown(lk);
     }
 
-    serviceContext->setFastClockSource(FastClockSourceFactory::create(Milliseconds(10)));
-
     BSONObjBuilder startupTimeElapsedBuilder;
     BSONObjBuilder startupInfoBuilder;
 
@@ -2116,8 +2114,6 @@ int mongod_main(int argc, char* argv[]) {
 
     waitForDebugger();
 
-    registerShutdownTask(shutdownTask);
-
     setupSignalHandlers();
 
     srand(static_cast<unsigned>(curTimeMicros64()));  // NOLINT
@@ -2132,10 +2128,21 @@ int mongod_main(int argc, char* argv[]) {
         quickExit(ExitCode::fail);
     }
 
+    // There is no single-threaded guarantee beyond this point.
+    ThreadSafetyContext::getThreadSafetyContext()->allowMultiThreading();
+
+    // Per SERVER-7434, startSignalProcessingThread must run after any forks (i.e.
+    // initialize_server_global_state::forkServerOrDie) and before the creation of any other threads
+    startSignalProcessingThread();
+
     auto* service = [] {
         try {
             auto serviceContextHolder = ServiceContext::make();
             auto* serviceContext = serviceContextHolder.get();
+
+            // This FastClockSourceFactory creates a background thread ClockSource. It must be set
+            // on ServiceContext before any other threads can get and use it.
+            serviceContext->setFastClockSource(FastClockSourceFactory::create(Milliseconds(10)));
             setGlobalServiceContext(std::move(serviceContextHolder));
 
             return serviceContext;
@@ -2149,6 +2156,8 @@ int mongod_main(int argc, char* argv[]) {
             quickExit(ExitCode::fail);
         }
     }();
+
+    registerShutdownTask(shutdownTask);
 
     {
         // Create the durable history registry prior to calling the `setUp*` methods. They may
@@ -2185,13 +2194,7 @@ int mongod_main(int argc, char* argv[]) {
     if (!initialize_server_global_state::checkSocketPath())
         quickExit(ExitCode::fail);
 
-    // There is no single-threaded guarantee beyond this point.
-    ThreadSafetyContext::getThreadSafetyContext()->allowMultiThreading();
     LOGV2(5945603, "Multi threading initialized");
-
-    // Per SERVER-7434, startSignalProcessingThread must run after any forks (i.e.
-    // initialize_server_global_state::forkServerOrDie) and before the creation of any other threads
-    startSignalProcessingThread();
 
     startAllocatorThread();
 
